Add basic pronouns support
It doesn't allow for free-range text yet as that would require
moderation support to prevent abuse, but this is a start.
